created doPost method of item servlet